# reviewoor

./: .env.example  .gitignore  CLAUDE.md  README.md  example.py  pyproject.toml  run_benchmark.sh  test_data_check.py  test_single_chart.py  test_visualizer_debug.py  test_visualizer_debug_simple.py  test_viz.py
.deepeval/: .deepeval  .deepeval_telemetry.txt
examples/: 01_basic_review.py  02_file_review.py  03_directory_review.py  04_static_analysis_only.py  05_custom_review.py  06_security_focused.py  07_model_selection.py  08_cli_interface.py  09_model_benchmark.py  10_deepeval_benchmark.py  10_quick_eval.py  11_deepeval_simple.py  11_visualize_results.py  12_deepeval_advanced_benchmark.py  README.md  dataset_manager.py  run_all.sh
src/: __init__.py
src/agents/: __init__.py  anthropic.py  base.py  openai.py
src/analyzers/: __init__.py  static_analyzer.py
src/core/: __init__.py  orchestrator.py
src/evaluation/: __init__.py  benchmark.py  visualizer.py  visualizer_debug.py
src/models/: __init__.py  issues.py  results.py  severity.py
src/tools/: __init__.py  code_tools.py
