[project]
name = "agentops"
version = "0.1.0"
description = "AI-powered Python code review agent with static analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.54.0",
    "openai>=1.88.0",
    "ruff>=0.11.13",
]

[project.optional-dependencies]
dev = [
    "pyright>=1.1.0",
    "pytest>=7.0.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["agentops", "examples"]
exclude = ["**/__pycache__", ".venv"]
