[project]
name = "reviewoor"
version = "0.1.0"
description = "AI-powered Python code review agent with static analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agentops>=0.1.0",
    "anthropic>=0.54.0",
    "openai>=1.88.0",
    "ruff>=0.11.13",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pyright>=1.1.0",
    "pytest>=7.0.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["src", "examples"]
exclude = ["**/__pycache__", ".venv"]

[tool.ruff]
exclude = [
    ".venv",
    "__pycache__",
    "examples",
    "output",
    "example.py",
]
